--- a/text/accumulation.tex
+++ b/text/accumulation.tex
@@ -21,66 +21,66 @@ The proposition of accumulation is in fact quite simple: we merely wish to execu
 
 Accumulation of a work-package/work-report is deferred in the case that it has a not-yet-fulfilled dependency and is cancelled entirely in the case of an invalid dependency. Dependencies are specified as work-package hashes and in order to know which work-packages have been accumulated already, we maintain a history of what has been accumulated. This history, $\accumulated$, is sufficiently large for an epoch worth of work-reports. Formally:
 \begin{align}
-  \accumulated &\in \seq{\{\hash\}}_\epochlen \\
+  \accumulated &\in \seq{\protoset{\hash}}_\epochlen \\
   \accumulatedcup &\equiv \bigcup_{x \in \accumulated}(x)
 \end{align}
 
 We also maintain knowledge of ready (\ie available and/or audited) but not-yet-accumulated work-reports in the state item $\ready$. Each of these were made available at most one epoch ago but have or had unfulfilled dependencies. Alongside the work-report itself, we retain its unaccumulated dependencies, a set of work-package hashes. Formally:
 \begin{align}
-  \ready &\in \seq{\seq{(\workreport, \{\hash\})}}_\epochlen
+  \ready &\in \seq{\seq{\tuple{\workreport, \protoset{\hash}}}}_\epochlen
 \end{align}
 
 The newly available work-reports, $\mathbf{W}$, are partitioned into two sequences based on the condition of having zero prerequisite work-reports. Those meeting the condition, $\mathbf{W}^!$, are accumulated immediately. Those not, $\mathbf{W}^Q$, are for queued execution. Formally:
 \begin{align}
-  \mathbf{W}^! &\equiv [ w \mid w \orderedin \mathbf{W}, |(w_x)_\mathbf{p}| = 0 \wedge w_\wr¬srlookup = \{\} ] \\
+  \mathbf{W}^! &\equiv [ w \mid w \orderedin \mathbf{W}, |(w_\wr¬context)_\cx¬prerequisites| = 0 \wedge w_\wr¬srlookup = \emset ] \\
   \mathbf{W}^Q &\equiv E(\sq{
     D(w) \mid
     w \orderedin \mathbf{W},
-    |(w_x)_\mathbf{p}| > 0 \vee w_\wr¬srlookup \ne \{\}
+    |(w_\wr¬context)_\cx¬prerequisites| > 0 \vee w_\wr¬srlookup \ne \emset
   }, \accumulatedcup)\!\!\!\!\\
-  D(w) &\equiv (w, \{(w_x)_\mathbf{p}\} \cup \Fkeys{w_\wr¬srlookup})
+  D(w) &\equiv (w, \set{(w_\wr¬context)_\cx¬prerequisites} \cup \Fkeys{w_\wr¬srlookup})
 \end{align}
 
 We define the queue-editing function $E$, which is essentially a mutator function for items such as those of $\ready$, parameterized by sets of now-accumulated work-package hashes (those in $\accumulated$). It is used to update queues of work-reports when some of them are accumulated. Functionally, it removes all entries whose work-report's hash is in the set provided as a parameter, and removes any dependencies which appear in said set. Formally:
 \begin{equation}
-  E\colon\left\{\begin{aligned}
-      &(\seq{(\workreport, \{\hash\})}, \{\hash\}) \to \seq{(\workreport, \{\hash\})} \\
-    &(\mathbf{r}, \mathbf{x}) \mapsto \left[
-      (w, \mathbf{d} \setminus \mathbf{x})
-      \,\middle\vert\,
-      \left\{\,\begin{aligned}
+  E\colon\abracegroup{
+      &(\seq{\tuple{\workreport, \protoset{\hash}}}, \protoset{\hash}) \to \seq{\tuple{\workreport, \protoset{\hash}}} \\
+    &(\mathbf{r}, \mathbf{x}) \mapsto \sq{\build{
+      \tup{w, \mathbf{d} \setminus \mathbf{x}}
+    }{
+      \begin{aligned}
         &(w, \mathbf{d}) \orderedin \mathbf{r} ,\\
         &(w_\wr¬avspec)_\as¬packagehash \not\in \mathbf{x}
-      \end{aligned}\right.
-      \right]
-  \end{aligned}\right.
+      \end{aligned}
+    }}
+  }
 \end{equation}
 
 We further define the accumulation priority queue function $Q$, which provides the sequence of work-reports which are accumulatable given a set of not-yet-accumulated work-reports and their dependencies.
 \begin{equation}
-  Q\colon\left\{\begin{aligned}
-    &\seq{(\workreport, \{\hash\})} \to \seq{\workreport} \\
+  Q\colon\abracegroup{
+    &\seq{\tuple{\workreport, \protoset{\hash}}} \to \seq{\workreport} \\
     &\mathbf{r} \mapsto \begin{cases}
       [] &\when \mathbf{g} = [] \\
       \mathbf{g} \concat Q(E(\mathbf{r}, \srmap(\mathbf{g})))\!\!\!\! &\otherwise \\
-      \multicolumn{2}{l}{\,\where \mathbf{g} = [w \mid (w, \{\}) \orderedin \mathbf{r}]}
+      \multicolumn{2}{l}{\,\where \mathbf{g} = [w \mid (w, \emset) \orderedin \mathbf{r}]}
     \end{cases}
-  \end{aligned}\right.
+  }
 \end{equation}
 
 Finally, we define the mapping function $\srmap$ which extracts the corresponding work-package hashes from a set of work-reports:
 \begin{equation}
-  \srmap\colon\left\{\begin{aligned}
-    \{\workreport\} &\to \{\hash\}\\
-    \mathbf{w} &\mapsto \{ (w_\wr¬avspec)_\as¬packagehash \mid w \in \mathbf{w} \}
-  \end{aligned}\right.
+  \srmap\colon\abracegroup{
+    \protoset{\workreport} &\to \protoset{\hash}\\
+    \mathbf{w} &\mapsto \set{ (w_\wr¬avspec)_\as¬packagehash \mid w \in \mathbf{w} }
+  }
 \end{equation}
 
 We may now define the sequence of accumulatable work-reports in this block as $\mathbf{W}^*$:
 \begin{align}
   \using m &= \H_\¬timeslot \bmod \epochlen\\
   \mathbf{W}^* &\equiv \mathbf{W}^! \concat Q(\mathbf{q}) \\
-  \quad\where \mathbf{q} &= E(\wideparen{\ready_{m\dots}} \concat \wideparen{\ready_{\dots m}} \concat \mathbf{W}^Q, \srmap(\mathbf{W}^!))
+  \quad\where \mathbf{q} &= E(\concatall{\ready_{m\dots}} \concat \concatall{\ready_{\dots m}} \concat \mathbf{W}^Q, \srmap(\mathbf{W}^!))
 \end{align}
 
 \subsection{Execution}
@@ -109,66 +109,67 @@ Our formalisms begin by defining $\partialstate$ as a characterization of (\ie v
   \end{aligned}\right)
 \end{equation}
 
-We denote the set characterizing a \emph{deferred transfer} as $\defxfer$, noting that a transfer includes a memo component $m$ of $\mathsf{W}_T = 128$ octets, together with the service index of the sender $s$, the service index of the receiver $d$, the balance to be transferred $a$ and the gas limit $g$ for the transfer. Formally:
+We denote the set characterizing a \emph{deferred transfer} as $\defxfer$, noting that a transfer includes a memo component $\dx¬memo$ of $\mathsf{W}_T = 128$ octets, together with the service index of the sender $\dx¬source$, the service index of the receiver $\dx¬dest$, the balance to be transferred $\dx¬amount$ and the gas limit $\dx¬gas$ for the transfer. Formally:
 \begin{align}
   \defxfer \equiv \tuple{
-    \isa{s}{\serviceid} ,
-    \isa{d}{\serviceid} ,
-    \isa{a}{\balance} ,
-    \isa{m}{\blob_{\mathsf{W}_T}} ,
-    \isa{g}{\gas}
+    \isa{\dx¬source}{\serviceid} ,
+    \isa{\dx¬dest}{\serviceid} ,
+    \isa{\dx¬amount}{\balance} ,
+    \isa{\dx¬memo}{\blob_{\mathsf{W}_T}} ,
+    \isa{\dx¬gas}{\gas}
   }
 \end{align}
 
 Finally, we denote the set of service/hash pairs, utilized as a service-indexed commitment to the accumulation output, as $\servouts$:
 \begin{equation}
-  \servouts \equiv \{(\serviceid, \hash)\} \qquad \gasused \equiv \seq{\tup{\serviceid, \gas}}
+  \servouts \equiv \protoset{\tuple{\serviceid, \hash}} \qquad
+  \gasused \equiv \seq{\tuple{\serviceid, \gas}}
 \end{equation}
 
 We define the outer accumulation function $\accseq$ which transforms a gas-limit, a sequence of work-reports, an initial partial-state and a dictionary of services enjoying free accumulation, into a tuple of the number of work-results accumulated, a posterior state-context, the resultant deferred-transfers and accumulation-output pairings:
 \begin{equation}
-  \accseq\colon\left\{\begin{aligned}
+  \accseq\colon\abracegroup{
     &(\gas, \seq{\workreport}, \partialstate, \dict{\serviceid}{\gas}) \to (\N, \partialstate, \defxfers, \servouts, \gasused) \\
     &(g, \mathbf{w}, \mathbf{o}, \mathbf{f}) \!\mapsto\! \begin{cases}
-      (0, \mathbf{o}, [], \{\}, []) &
+      (0, \mathbf{o}, [], \emset, []) &
         \when i = 0 \\
       (i + j, \mathbf{o}', \mathbf{t}^* \!\!\concat \mathbf{t}, \mathbf{b}^* \!\cup \mathbf{b}, \mathbf{u}^* \!\!\concat \mathbf{u})\!\!\!\! &
         \text{o/w}\!\!\!\!\!\!\!\! \\
     \end{cases} \\
     &\quad\where i = \max(\N_{\len{\mathbf{w}} + 1}): \sum_{w \in \mathbf{w}_{\dots i}}\sum_{r \in w_\mathbf{r}}(r_g) \le g \\
     &\quad\also (\mathbf{o}^*, \mathbf{t}^*, \mathbf{b}^*, \mathbf{u}^*) = \accpar(\mathbf{o}, \mathbf{w}_{\dots i}, \mathbf{f}) \\
-    &\quad\also (j, \mathbf{o}', \mathbf{t}, \mathbf{b}, \mathbf{u}) = \accseq(g - \!\!\!\!\sum_{(s, u) \in \mathbf{u}^*}\!\!\!\!u, \mathbf{w}_{i\dots}, \mathbf{o}^*, \{\})
-  \end{aligned}\right.
+    &\quad\also (j, \mathbf{o}', \mathbf{t}, \mathbf{b}, \mathbf{u}) = \accseq(g - \!\!\!\!\sum_{(s, u) \in \mathbf{u}^*}\!\!\!\!u, \mathbf{w}_{i\dots}, \mathbf{o}^*, \emset)
+  }
 \end{equation}
 
-We come to define the parallelized accumulation function $\accpar$ which, with the help of the single-service accumulation function $\accone$, transforms an initial state-context, together with a sequence of work-reports and a dictionary of privileged always-accumulate services, into a tuple of the total gas utilized in \textsc{pvm} execution $u$, a posterior state-context $(\mathbf{d}', \mathbf{i}', \mathbf{q}', m', \mathbf{a}', v', \mathbf{x}')$ and the resultant accumulation-output pairings $\mathbf{b}$ and deferred-transfers $\wideparen{\mathbf{t}}$:
+We come to define the parallelized accumulation function $\accpar$ which, with the help of the single-service accumulation function $\accone$, transforms an initial state-context, together with a sequence of work-reports and a dictionary of privileged always-accumulate services, into a tuple of the total gas utilized in \textsc{pvm} execution $u$, a posterior state-context $(\mathbf{d}', \mathbf{i}', \mathbf{q}', m', \mathbf{a}', v', \mathbf{x}')$ and the resultant accumulation-output pairings $\mathbf{b}$ and deferred-transfers $\concatall{\mathbf{t}}$:
 \begin{equation}
-  \accpar\colon\left\{\;\begin{aligned}
-    &(\partialstate, \seq{\workreport}, \dict{\serviceid}{\gas}) \to (\partialstate, \defxfers, \servouts, \gasused) \\
-    &(\mathbf{o}, \mathbf{w}, \mathbf{f}) \mapsto ((\mathbf{d}', \mathbf{i}', \mathbf{q}', m', \mathbf{a}', v', \mathbf{z}'), \wideparen{\mathbf{t}}, \mathbf{b}, \mathbf{u})\!\!\!\!\!\!\\
+  \accpar\colon\abracegroup[\;]{\begin{aligned}
+    &\tup{\partialstate, \seq{\workreport}, \dict{\serviceid}{\gas}} \to \tup{\partialstate, \defxfers, \servouts, \gasused} \\
+    &\tup{\mathbf{o}, \mathbf{w}, \mathbf{f}} \mapsto \tup{\tup{\mathbf{d}', \mathbf{i}', \mathbf{q}', m', \mathbf{a}', v', \mathbf{z}'}, \concatall{\mathbf{t}}, \mathbf{b}, \mathbf{u}}\!\!\!\!\!\!\\
     &\text{where:}\\
     &\ \begin{aligned}
-      \mathbf{s} &= \{ \mathbf{r}_s \mid w \in \mathbf{w}, \mathbf{r} \in w_\mathbf{r} \} \cup \Fkeys{\mathbf{f}} \\
-      \mathbf{u} &= [(s, \accone(\mathbf{o}, \mathbf{w}, \mathbf{f}, s)_u) \mid s \orderedin \mathbf{s}] \\
-      \mathbf{b} &= \{ (s, b) \mid s \in \mathbf{s},\, b = \accone(\mathbf{o}, \mathbf{w}, \mathbf{f}, s)_b,\, b \ne \none \} \\
-      \mathbf{t} &= [\accone(\mathbf{o}, \mathbf{w}, \mathbf{f}, s)_\mathbf{t} \mid s \orderedin \mathbf{s}] \\
+      \mathbf{s} &= \set{\build{\mathbf{r}_s}{w \in \mathbf{w}, \mathbf{r} \in w_\mathbf{r}}} \cup \Fkeys{\mathbf{f}} \\
+      \mathbf{u} &= \sq{\tup{s, \accone(\mathbf{o}, \mathbf{w}, \mathbf{f}, s)_u} \mid s \orderedin \mathbf{s}} \\
+      \mathbf{b} &= \set{ \build{\tup{s, b}}{s \in \mathbf{s},\, b = \accone(\mathbf{o}, \mathbf{w}, \mathbf{f}, s)_b,\, b \ne \none }} \\
+      \mathbf{t} &= \sq{\accone(\mathbf{o}, \mathbf{w}, \mathbf{f}, s)_\mathbf{t} \mid s \orderedin \mathbf{s}} \\
       \mathbf{d}' &= \fnprovide((\mathbf{d} \cup \mathbf{n}) \setminus \mathbf{m}, \bigcup_{s \in \mathbf{s}} \accone(\mathbf{o}, \mathbf{w}, \mathbf{f}, s)_\mathbf{p}) \\
-      &(\mathbf{d}, \mathbf{i}, \mathbf{q}, m, \mathbf{z}) = \mathbf{o} \\
-      (m', \mathbf{a}^*, v^*, \mathbf{z}') &= (\accone(\mathbf{o}, \mathbf{w}, \mathbf{f}, m)_\mathbf{o})_{(m, \mathbf{a}, v, \mathbf{z})} \\
+      &\tup{\mathbf{d}, \mathbf{i}, \mathbf{q}, m, \mathbf{z}} = \mathbf{o} \\
+      \tup{m', \mathbf{a}^*, v^*, \mathbf{z}'} &= (\accone(\mathbf{o}, \mathbf{w}, \mathbf{f}, m)_\mathbf{o})_{\tup{m, \mathbf{a}, v, \mathbf{z}}} \\
       \forall c \in \coreindex : \mathbf{a}'_c &= ((\accone(\mathbf{o}, \mathbf{w}, \mathbf{f}, \mathbf{a}^*_c)_\mathbf{o})_\mathbf{a})_c \\
       v' &= (\accone(\mathbf{o}, \mathbf{w}, \mathbf{f}, v^*)_\mathbf{o})_v \\
       \mathbf{i}' &= (\accone(\mathbf{o}, \mathbf{w}, \mathbf{f}, v)_\mathbf{o})_\mathbf{i} \\
       \forall c \in \coreindex : \mathbf{q}'_c &= (\accone(\mathbf{o}, \mathbf{w}, \mathbf{f}, \mathbf{a}_c)_\mathbf{o})_\mathbf{q} \\
-      \mathbf{n} &= \bigcup_{s \in \mathbf{s}}(\{ (\accone(\mathbf{o}, \mathbf{w}, \mathbf{f}, s)_\mathbf{o})_\mathbf{d} \setminus \Fkeys{\mathbf{d} \setminus \{s\}} \}) \\
+      \mathbf{n} &= \bigcup_{s \in \mathbf{s}}(\set{ (\accone(\mathbf{o}, \mathbf{w}, \mathbf{f}, s)_\mathbf{o})_\mathbf{d} \setminus \Fkeys{\mathbf{d} \setminus \set{s}} }) \\
       \mathbf{m} &= \bigcup_{s \in \mathbf{s}}(\Fkeys{\mathbf{d}} \setminus \Fkeys{(\accone(\mathbf{o}, \mathbf{w}, \mathbf{f}, s)_\mathbf{o})_\mathbf{d}})
     \end{aligned}
-  \end{aligned}\right.
+  \end{aligned}}
 \end{equation}
 
 And $\fnprovide$ is the preimage integration function, which transforms a dictionary of service states and a set of service/hash pairs into a new dictionary of service states. Preimage provisions into services which no longer exist or whose relevant request is dropped are disregarded:
 \begin{equation}
-  \fnprovide\colon\left\{\begin{aligned}
-    &(\dict{\serviceid}{\serviceaccount}, \{\tup{\serviceid, \blob}\}) \to \dict{\serviceid}{\serviceaccount} \\
+  \fnprovide\colon\abracegroup{
+    &(\dict{\serviceid}{\serviceaccount}, \protoset{\tuple{\serviceid, \blob}}) \to \dict{\serviceid}{\serviceaccount} \\
     &(\mathbf{d}, \mathbf{p}) \mapsto \mathbf{d}'\;\where \mathbf{d}' = \mathbf{d}\;\text{except:} \\
     &\quad\forall \tup{s, \mathbf{i}} \in \mathbf{p},\;
       s \in \Fkeys{\mathbf{d}},\;
@@ -184,7 +185,7 @@ And $\fnprovide$ is the preimage integration function, which transforms a dictio
     %  &\mathbf{d}'[s]_\mathbf{l}[\blake(\mathbf{i}), \len{\mathbf{i}}] = \thetime' \wedge \\
     %  &\mathbf{d}'[s]_\mathbf{p}[\blake{\mathbf{i}}] = \mathbf{i}
     %\end{aligned} \\
-  \end{aligned}\right.
+  }
 \end{equation}
 
 We note that while forming the union of all altered, newly added service and newly removed indices, defined in the above context as $\Fkeys{\mathbf{n}} \cup \mathbf{m}$, different services may not each contribute the same index for a new, altered or removed service. This cannot happen for the set of removed and altered services since the code hash of removable services has no known preimage and thus cannot execute itself to make an alteration. For new services this should also never happen since new indices are explicitly selected to avoid such conflicts. In the unlikely event it does happen, the block must be considered invalid.
@@ -202,7 +203,7 @@ The single-service accumulation function, $\accone$, transforms an initial state
   }
 \end{equation}
 \begin{align}
-    &\accone \colon \left\{\;\begin{aligned}
+    &\accone \colon \abracegroup[\;]{
     &\begin{aligned}
       \tup{\begin{aligned}
         &\partialstate, \seq{\workreport},\\
@@ -214,7 +215,7 @@ The single-service accumulation function, $\accone$, transforms an initial state
           \isa{&\mathbf{t}&}{\defxfers}\,,\;
           \isa{b}{\optional{\hash}}\,,\\
           \isa{u&}{\gas}\,,\;
-          \isa{&\mathbf{p}&}{\{\tup{\serviceid, \blob}\}}
+          \isa{&\mathbf{p}&}{\protoset{\tuple{\serviceid, \blob}}}
         \end{alignedat}
       } \\
       (\mathbf{o}, \mathbf{w}, \mathbf{f}, s) &\mapsto \Psi_A(\mathbf{o}, \thetime', s, g, \mathbf{i})
@@ -240,7 +241,7 @@ The single-service accumulation function, $\accone$, transforms an initial state
       \end{alignedat}
     \,\right]
     \end{aligned}
-  \end{aligned}\right.\!\!\!\!
+  }\!\!\!\!
 \end{align}
 
 This introduces $\operandtuple$, the set of wrangled \emph{operand tuples}, used as an operand to the \textsc{pvm} Accumulation function $\Psi_A$: work-items (together with associated data in their work-packages) are rephrased into a sequence of such operand tuples $\mathbf{i}$. It also draws upon $\wl¬gaslimit$, the gas limit implied by the work-reports and gas-privileges.
@@ -263,7 +264,7 @@ From this formulation, we also receive $\mathbf{t}$, the grand sequence of defer
 We compose $\mathbf{I}$, our accumulation statistics, which is a mapping from the service indices which were accumulated to the amount of gas used throughout accumulation and the number of work-items accumulated. Formally:
 \begin{align}
   &\mathbf{I} \in \dict{\serviceid}{\tuple{\gas, \N}} \\
-  &\textstyle \mathbf{I} \equiv \left\{ s \mapsto \tup{\sum_{(s, u) \in \mathbf{u}}(u), \len{N(s)}} \;\middle\mid\; N(s) \ne [] \right\} \\
+  &\textstyle \mathbf{I} \equiv \set{ s \mapsto \tup{\sum_{(s, u) \in \mathbf{u}}(u), \len{N(s)}} \;\middle\mid\; N(s) \ne [] } \\
   \where &N(s) \equiv \sq{r \mid w \orderedin \mathbf{W}^*_{\dots n} , r \orderedin w_\mathbf{r} , r_s = s }
 \end{align}
 
@@ -271,16 +272,16 @@ We compose $\mathbf{I}$, our accumulation statistics, which is a mapping from th
 
 We have denoted the sequence of implied transfers as $\mathbf{t}$, ordered internally according to the source service's execution. We define a selection function $\selectxfers$, which maps a desired destination service index into the sequence of transfers from $\mathbf{t}$ which target said service. It is ordered primarily according to the source service index and secondarily their order within $\mathbf{t}$. Formally:
 \begin{equation}
-  \selectxfers\colon \left\{\;\begin{aligned}
+  \selectxfers\colon \abracegroup[\;]{
     \serviceid &\to \defxfers \\
-    d &\mapsto \left[\,t \mid s \orderedin \serviceid,\ t \orderedin \mathbf{t},\ t_s = s,\ t_d = d\,\right]
-  \end{aligned}\right.\!\!\!\!
+    d &\mapsto \sq{\,t \mid s \orderedin \serviceid,\ t \orderedin \mathbf{t},\ t_s = s,\ t_d = d\,}
+  }\!\!\!\!
 \end{equation}
 
 The second intermediate state $\accountspostxfer$ may then be defined with all the deferred effects of the transfers applied followed by the last-accumulation record being updated for all accumulated services:
 \begin{align}
-  \mathbf{x} &= \{ s \mapsto \Psi_T(\accountspostacc, \thetime', s, \selectxfers(s)) \mid (s \mapsto a) \in \accountspostacc \} \\
-  \accountspostxfer &\equiv \left\{ s \mapsto a' \;\middle\mid\; (s \mapsto \tup{a, u}) \in \mathbf{x} \right\} \\
+  \mathbf{x} &= \set{ s \mapsto \Psi_T(\accountspostacc, \thetime', s, \selectxfers(s)) \mid (s \mapsto a) \in \accountspostacc } \\
+  \accountspostxfer &\equiv \set{ s \mapsto a' \;\middle\mid\; (s \mapsto \tup{a, u}) \in \mathbf{x} } \\
   &\where a' = \begin{cases}
     a \exc a'_a = \thetime' &\when s \in \Fkeys{\mathbf{I}} \\
     a &\otherwise
@@ -291,10 +292,10 @@ Furthermore we build the deferred transfers statistics value $\mathbf{X}$ as the
 \begin{align}
   \label{eq:deferredtransfers}
   &\mathbf{X} \in \dict{\serviceid}{\tuple{\N, \gas}} \\
-  &\textstyle \mathbf{X} \equiv \left\{ d \mapsto \tup{\len{\selectxfers(d)}, u} \;\middle\vert\; \begin{aligned}
+  &\textstyle \mathbf{X} \equiv \set{ d \mapsto \tup{\len{\selectxfers(d)}, u} \;\middle\vert\; \begin{aligned}
     \selectxfers(d) &\ne [],\\ \exists a: \mathbf{x}[d] &= (a, u)
   \end{aligned}
-  \right\}
+  }
 \end{align}
 
 Note that $\Psi_T$ is defined in appendix \ref{sec:ontransferinvocation} such that it results in $\accountspostacc[d]$, \ie no difference to the account's intermediate state, if $\selectxfers(d) = []$, \ie said account received no transfers.
@@ -331,13 +332,13 @@ After accumulation, we must integrate all preimages provided in the lookup extri
 
 We disregard, without prejudice, any preimages which due to the effects of accumulation are no longer useful. We define $\accountspostpreimage$ as the state after the integration of the still-relevant preimages:
 \begin{align}
-  \using \mathbf{P} = \{
+  \using \mathbf{P} = \set{\build{
     (s, \mathbf{p})
-    \mid
+  }{
       \tup{s, \mathbf{p}} \in \xtpreimages, Y(\accountspostxfer, s, \blake(\mathbf{p}), \len{\mathbf{p}})
-    \}\\
-  \accountspostpreimage = \accountspostxfer \text{ ex. } \forall \tup{s,\,\mathbf{p}} \in \mathbf{P} : \left\{\,\begin{aligned}
+  }}\\
+  \accountspostpreimage = \accountspostxfer \text{ ex. } \forall \tup{s,\,\mathbf{p}} \in \mathbf{P} : \abracegroup[\,]{
       \quad\accountspostpreimage[s]_\mathbf{p}[\blake(\mathbf{p})] &= \mathbf{p} \\
       \accountspostpreimage[s]_\mathbf{l}[\blake(\mathbf{p}), \len{\mathbf{p}}] &= [\thetime']
-    \end{aligned}\right.\!\!\!\!
+    }\!\!\!\!
 \end{align}
