--- a/text/auditing.tex
+++ b/text/auditing.tex
@@ -74,13 +74,13 @@ Formally, for each tranche $n$ we ensure the announcement statement is published
 
 We define $A_n$ as our perception of which validator is required to audit each of the work-reports (identified by their associated core) at tranche $n$. This comes from each other validators' announcements (defined above). It cannot be correctly evaluated until $n$ is current. We have absolute knowledge about our own audit requirements.
 \begin{align}
-  A_n: \workreport &\to \powset{\valindex} \\
+  A_n: \workreport &\to \protoset{\valindex} \\
   \forall (c, w) &\in \mathbf{a}_0 : v \in q_0(w)
 \end{align}
 
 We further define $J_\top$ and $J_\bot$ to be the validator indices who we know to have made respectively, positive and negative, judgments mapped from each work-report's core. We don't care from which tranche a judgment is made.
 \begin{align}
-  J_{\{\bot, \top\}}: \workreport \to \powset{\valindex}
+  J_\bool: \workreport \to \protoset{\valindex}
 \end{align}
 
 We are able to define $\mathbf{a}_n$ for tranches beyond the first on the basis of the number of validators who we know are required to conduct an audit yet from whom we have not yet seen a judgment. It is possible that the late arrival of information alters $\mathbf{a}_n$ and nodes should reevaluate and act accordingly should this happen.
@@ -89,7 +89,7 @@ We can thus define $\mathbf{a}_n$ beyond the initial tranche through a new \text
 \begin{align}
   \nonumber\forall n > 0:&\\
   \ s_n(w) &\in \bandersig{\activeset[v]_\vk¬bs}{\mathsf{X}_U \concat \banderout{\H_\¬vrfsig}\concat\blake(w)\append n}{[]} \\
-  \ \mathbf{a}_n &\equiv \{ \textstyle\frac{\valcount}{256\mathsf{F}}\banderout{s_n(w)}_0 < m_n \mid w \in \mathbf{Q}, w \ne \none \}\!\!\!\!\\
+  \ \mathbf{a}_n &\equiv \set{ \textstyle\frac{\valcount}{256\mathsf{F}}\banderout{s_n(w)}_0 < m_n \mid w \in \mathbf{Q}, w \ne \none }\!\!\!\!\\
   \nonumber \where m_n &= |A_{n - 1}(w) \setminus J_\top(w)|
 \end{align}
 
@@ -139,10 +139,10 @@ All judgments $\mathbf{j}_*$ should be published to other validators in order th
 We consider a work-report as audited under two circumstances. Either, when it has no negative judgments and there exists some tranche in which we see a positive judgment from all validators who we believe are required to audit it; or when we see positive judgments for it from greater than two-thirds of the validator set.
 \begin{align}
 %  U(w) &\Leftrightarrow J_\bot(w) = \emptyset \wedge \exists n : A_n(w) \subset J_\top(w) \vee |J_\top(w)| > \twothirds\valcount%\!\!\!\!\!\!\!\!\!\!\!\!\!\!
-  U(w) &\Leftrightarrow \bigvee\,\left\{\,\begin{aligned}
-      &J_\bot(w) = \emptyset \wedge \exists n : A_n(w) \subset J_\top(w) \\
-      &|J_\top(w)| > \twothirds\valcount
-  \end{aligned}\right.
+  U(w) &\Leftrightarrow \bigvee\,\abracegroup[\,]{
+    &J_\bot(w) = \emptyset \wedge \exists n : A_n(w) \subset J_\top(w) \\
+    &|J_\top(w)| > \twothirds\valcount
+  }
 \end{align}
 
 Our block $\block$ may be considered audited, a condition denoted $\mathbf{U}$, when all the work-reports which were made available are considered audited. Formally:
