--- a/text/erasure_coding.tex
+++ b/text/erasure_coding.tex
@@ -3,7 +3,7 @@
 \newcommand{\join}{\text{join}}
 \newcommand{\spl}{\text{split}}
 
-The foundation of the data-availability and distribution system of \Jam is a systematic Reed-Solomon erasure coding function in \textsc{gf}($2^{16}$) of rate 342:1023, the same transform as done by the algorithm of \cite{lin2014novel}. We use a little-endian $\blob_2$ form of the 16-bit \textsc{gf} points with a functional equivalence given by $\se_2$. From this we may assume the encoding function $\erasurecode: \seq{\blob_2}_{342} \to \seq{\blob_2}_{1023}$ and the recovery function $\ecrecover: \powset[342]{\tuple{\blob_2, \N_{1023}}} \to \seq{\blob_2}_{342}$. Encoding is done by extrapolating a data blob of size 684 octets (provided in $\erasurecode$ here as 342 octet pairs) into 1,023 octet pairs. Recovery is done by collecting together any distinct 342 octet pairs, together with their indices, and transforming this into the original sequence of 342 octet pairs.
+The foundation of the data-availability and distribution system of \Jam is a systematic Reed-Solomon erasure coding function in \textsc{gf}($2^{16}$) of rate 342:1023, the same transform as done by the algorithm of \cite{lin2014novel}. We use a little-endian $\blob_2$ form of the 16-bit \textsc{gf} points with a functional equivalence given by $\se_2$. From this we may assume the encoding function $\erasurecode: \seq{\blob_2}_{342} \to \seq{\blob_2}_{1023}$ and the recovery function $\ecrecover: \protoset{\tuple{\blob_2, \N_{1023}}}_{342} \to \seq{\blob_2}_{342}$. Encoding is done by extrapolating a data blob of size 684 octets (provided in $\erasurecode$ here as 342 octet pairs) into 1,023 octet pairs. Recovery is done by collecting together any distinct 342 octet pairs, together with their indices, and transforming this into the original sequence of 342 octet pairs.
 
 Practically speaking, this allows for the efficient encoding and recovery of data whose size is a multiple of 684 octets. Data whose length is not divisible by 684 must be padded (we pad with zeroes). We use this erasure-coding in two contexts within the \Jam protocol; one where we encode variable sized (but typically very large) data blobs for the Audit \textsc{da} and block-distribution system, and the other where we encode much smaller fixed-size data \emph{segments} for the Import \textsc{da} system.
 
@@ -22,7 +22,7 @@ Formally we begin by defining four utility functions for splitting some large se
 \begin{align}
   \forall n \in \N, k \in \N :\ &\spl_n(\mathbf{d} \in \blob_{k:n}) \in \seq{\blob_n}_k \equiv \sq{\mathbf{d}_{0\dots+n}, \mathbf{d}_{n\dots+n}, \cdots, \mathbf{d}_{(k-1)n\dots+n}} \\
   \forall n \in \N, k \in \N :\ &\join_n(\mathbf{c} \in \seq{\blob_n}_k) \in \blob_{k:n} \equiv \mathbf{c}_0 \concat \mathbf{c}_1 \concat \dots \\
-  \forall n \in \N, k \in \N :\ &\unzip_n(\mathbf{d} \in \blob_{k:n}) \in \seq{\blob_n}_k \equiv \sq{ [\mathbf{d}_{j\cdot k + i} \mid j \orderedin \N_n] \mid i \orderedin \N_k} \\
+  \forall n \in \N, k \in \N :\ &\unzip_n(\mathbf{d} \in \blob_{k:n}) \in \seq{\blob_n}_k \equiv \sq{ \sq{ \mathbf{d}_{j\cdot k + i} \mid j \orderedin \N_n } \mid i \orderedin \N_k} \\
   \forall n \in \N, k \in \N :\ &\lace_n(\mathbf{c} \in \seq{\blob_n}_k) \in \blob_{k:n} \equiv \mathbf{d} \ \where \forall i \in \N_k, j \in \N_n: \mathbf{d}_{j\cdot k + i} = (\mathbf{c}_i)_j
 \end{align}
 
@@ -33,25 +33,25 @@ We define the transposition operator hence:
 
 We may then define our erasure-code chunking function which accepts an arbitrary sized data blob whose length divides wholly into 684 octets and results in 1,023 sequences of sequences each of smaller blobs:
 \begin{equation}\label{eq:erasurecoding}
-  \erasurecode_{k \in \N}\colon\left\{\begin{aligned}
+  \erasurecode_{k \in \N}\colon\abracegroup{
     \blob_{684k} &\to \seq{\blob_{2k}}_{1023} \\
     \mathbf{d} &\mapsto [ \join(\mathbf{c}) \mid \mathbf{c} \orderedin {}^{\text{T}}[\Ferasurecode{\mathbf{p}} \mid \mathbf{p} \orderedin \text{unzip}_{684}(\mathbf{d})] ]
-  \end{aligned}\right.
+  }
 \end{equation}
 
 The original data may be reconstructed with any 342 of the 1,023 resultant items (along with their indices). If the original 342 items are known then reconstruction is just their concatenation.
 \begin{equation}\label{eq:erasurecodinginv}
-  \ecrecover_{k \in \N}\colon\left\{\begin{aligned}
-    \{(\blob_{2k}, \N_{1023})\}_{342} &\to \blob_{684k} \\
+  \ecrecover_{k \in \N}\colon\abracegroup{
+    \protoset{\tuple{\blob_{2k}, \N_{1023}}}_{342} &\to \blob_{684k} \\
     \mathbf{c} &\mapsto \begin{cases}
-      \se([\mathbf{x} \mid (\mathbf{x}, i) \orderedin \mathbf{c}]) &\when [i \mid (\mathbf{x}, i) \orderedin \mathbf{c}] = [0, 1, \dots 341]\\
+      \se(\sq{\mathbf{x} \mid \tup{\mathbf{x}, i} \orderedin \mathbf{c}}) &\when [i \mid (\mathbf{x}, i) \orderedin \mathbf{c}] = [0, 1, \dots 341]\\
       \lace_k([
         \ecrecover([(\spl_2(\mathbf{x})_p, i) \mid (\mathbf{x}, i) \orderedin \mathbf{c}])
       \mid p \in \N_k &\text{always}\\
     \end{cases}
     ])
 %      [ \ecrecover(\mathbf{y}, i) \mid \mathbf{y} \orderedin \transpose[ \spl_2(\mathbf{x}) \mid (\mathbf{x}, i) \orderedin \mathbf{c}] ]
-  \end{aligned}\right.
+  }
 \end{equation}
 
 
@@ -72,7 +72,7 @@ Hence:
 
 We name the generator of $\frac{\mathbb{F}_{16}}{\mathbb{F}_2}$, the root of the above polynomial, $\authpool$ as such: $\mathbb{F}_{16} = \mathbb{F}_2(\authpool)$.
 
-Instead of using the standard basis $\{1, \authpool, \authpool^2, \dots, \authpool^{15}\}$, we opt for a representation of $\mathbb{F}_{16}$ which performs more efficiently for the encoding and the decoding process. To that aim, we name this specific representation of $\mathbb{F}_{16}$ as $\tilde{\mathbb{F}}_{16}$ and define it as a vector space generated by the following Cantor basis:
+Instead of using the standard basis $\set{1, \authpool, \authpool^2, \dots, \authpool^{15}}$, we opt for a representation of $\mathbb{F}_{16}$ which performs more efficiently for the encoding and the decoding process. To that aim, we name this specific representation of $\mathbb{F}_{16}$ as $\tilde{\mathbb{F}}_{16}$ and define it as a vector space generated by the following Cantor basis:
 
 \begin{center}
   \begin{tabular}{ll}
