--- a/text/pvm.tex
+++ b/text/pvm.tex
@@ -46,29 +46,29 @@
 
 We declare the general \textsc{pvm} function $\Psi$. We assume a single-step invocation function define $\Psi_1$ and define the full \textsc{pvm} recursively as a sequence of such mutations up until the single-step mutation results in a halting condition. We additionally define the function $\deblob$ which extracts the instruction data, opcode bitmask and dynamic jump table from a program blob:
 \begin{align}
-  \Psi&\colon \left\{\begin{aligned}
-    (\blob, \pvmreg, \gas, \regs, \ram) &\to (\{\halt, \panic, \oog\} \cup \{\fault, \host\} \times \pvmreg, \pvmreg, \signedgas, \regs, \ram)\\
+  \Psi&\colon \abracegroup{
+    (\blob, \pvmreg, \gas, \regs, \ram) &\to (\set{\halt, \panic, \oog} \cup \set{\fault, \host} \times \pvmreg, \pvmreg, \signedgas, \regs, \ram)\\
     (\mathbf{p}, \imath, \gascounter, \registers, \mem) &\mapsto \begin{cases}
       \Psi(\mathbf{p}, \imath', \gascounter', \registers', \mem') &\when \varepsilon = \continue\\
       (\oog, \imath', \gascounter', \registers', \mem') &\when \gascounter' < 0\\
-      (\varepsilon, 0, \gascounter', \registers', \mem') &\when \varepsilon \in \{ \panic, \halt \}\\
+      (\varepsilon, 0, \gascounter', \registers', \mem') &\when \varepsilon \in \set{ \panic, \halt }\\
       (\varepsilon, \imath', \gascounter', \registers', \mem') &\otherwise
     \end{cases} \\
     \where (\varepsilon, \imath', \gascounter', \registers', \mem') &= \begin{cases}
       \Psi_1(\mathbf{c}, \mathbf{k}, \mathbf{j}, \imath, \gascounter, \registers, \mem) &\when \tup{\mathbf{c}, \mathbf{k}, \mathbf{j}} = \deblob(\mathbf{p}) \\
       (\panic, \imath, \gascounter, \registers, \mem) &\otherwise
     \end{cases}
-  \end{aligned}\right.\\
-  \deblob&\colon\left\{\begin{aligned}
+  }\\
+  \deblob&\colon\abracegroup{
     \blob &\to \tuple{\blob, \mathbb{B}, \seq{\pvmreg}} \cup \error \\
     \mathbf{p} &\mapsto \begin{cases}
       \tup{\mathbf{c}, \mathbf{k}, \mathbf{j}} &\when \exists!\,\mathbf{c}, \mathbf{k}, \mathbf{j} : \mathbf{p} = \se(\len{\mathbf{j}}) \concat \se_1(z) \concat \se(\len{\mathbf{c}}) \concat \se_z(\mathbf{j}) \concat \se(\mathbf{c}) \concat \se(\mathbf{k})\,,\ \len{\mathbf{k}} = \len{\mathbf{c}} \\
       \error &\otherwise
     \end{cases} \\
-  \end{aligned}\right.
+  }
 \end{align}
 
-The \textsc{pvm} exit reason $\varepsilon \in \{\halt, \panic, \oog\} \cup \{\fault, \host\} \times \pvmreg$ may be one of regular halt $\halt$, panic $\panic$ or out-of-gas $\oog$, or alternatively a host-call $\host$, in which the host-call identifier is associated, or page-fault $\fault$ in which case the address into \textsc{ram} is associated.
+The \textsc{pvm} exit reason $\varepsilon \in \set{\halt, \panic, \oog} \cup \set{\fault, \host} \times \pvmreg$ may be one of regular halt $\halt$, panic $\panic$ or out-of-gas $\oog$, or alternatively a host-call $\host$, in which the host-call identifier is associated, or page-fault $\fault$ in which case the address into \textsc{ram} is associated.
 
 \subsection{Instructions, Opcodes and Skip-distance}
 
@@ -82,10 +82,10 @@ The \textsc{pvm} counts instructions in octet terms (rather than in terms of ins
 
 We define the Skip function $\Fskip$ which provides the number of octets, minus one, to the next instruction's opcode, given the index of instruction's opcode index into $\mathbf{c}$ (and by extension $\mathbf{k}$):
 \begin{equation}
-  \Fskip\colon\left\{\begin{aligned}
+  \Fskip\colon\abracegroup{
     \N &\to \N\\
     i &\mapsto \min(24,\ j \in \N : (\mathbf{k} \concat [1, 1, \dots])_{i + 1 + j} = 1)
-  \end{aligned}\right.
+  }
 \end{equation}
 
 The Skip function appends $\mathbf{k}$ with a sequence of set bits in order to ensure a well-defined result for the final instruction $\Fskip(\len{\mathbf{c}} - 1)$.
@@ -127,17 +127,17 @@ Instructions of the following opcodes are considered basic-block termination ins
 
 We denote this set, as opcode indices rather than names, as $T$, which is a subset of all valid opcode indices $U$. We define the instruction opcode indices denoting the beginning of basic-blocks as $\basicblocks$:
 \begin{equation}
-  \basicblocks \equiv \left(\{0\} \cup \{n + 1 + \Fskip(n) \mid n \in \N_{\len{\mathbf{c}}} \wedge \mathbf{k}_n = 1 \wedge \mathbf{c}_n \in T\}\right) \cap \{n \mid \mathbf{k}_n = 1 \wedge \mathbf{c}_n \in U\}
+  \basicblocks \equiv \left(\set{0} \cup \set{\build{n + 1 + \Fskip(n)}{n \in \N_{\len{\mathbf{c}}} \wedge \mathbf{k}_n = 1 \wedge \mathbf{c}_n \in T}}\right) \cap \set{\build{n}{\mathbf{k}_n = 1 \wedge \mathbf{c}_n \in U}}
 \end{equation}
 
 \subsection{Single-Step State Transition}
 
 We must now define the single-step \textsc{pvm} state-transition function $\Psi_1$:
 \begin{equation}
-  \Psi_1\colon \left\{\begin{aligned}
-    (\blob, \mathbb{B}, \seq{\pvmreg}, \pvmreg, \gas, \regs, \ram) &\to (\{\panic, \halt, \continue \} \cup \{\fault, \host\} \times \pvmreg, \pvmreg, \signedgas, \regs, \ram)\\
+  \Psi_1\colon \abracegroup{
+    (\blob, \mathbb{B}, \seq{\pvmreg}, \pvmreg, \gas, \regs, \ram) &\to (\set{\panic, \halt, \continue } \cup \set{\fault, \host} \times \pvmreg, \pvmreg, \signedgas, \regs, \ram)\\
     (\mathbf{c}, \mathbf{k}, \mathbf{j}, \imath, \gascounter, \registers, \mem) &\mapsto (\varepsilon, \imath', \gascounter', \registers', \mem')
-  \end{aligned}\right.
+  }
 \end{equation}
 
 We define $\varepsilon$ together with the posterior values (denoted as prime) of each of the items of the machine state as being in accordance with the table below.
@@ -157,9 +157,9 @@ During the course of executing instructions, \textsc{ram} may be accessed. When 
 
 Formally, let $\mathbf{r}$ and $\mathbf{w}$ be the set of indices by which $\mem$ must be subscripted for inspection and mutation respectively in order to calculate the result of $\Psi_1$. We define the memory-access exceptional execution state $\varepsilon^\mu$ which shall, if not $\continue$, singly effect the returned return of $\Psi_1$ as following:
 \begin{align}
-  \using \mathbf{x} &= \{ x :\ x \in \mathbf{r} \wedge x \bmod 2^{32} \not\in \readable\mem\ \vee\ x \in \mathbf{w} \wedge x \bmod 2^{32} \not\in \writable\mem \} \\
+  \using \mathbf{x} &= \set{\build{x}{x \in \mathbf{r} \wedge x \bmod 2^{32} \not\in \readable\mem\ \vee\ x \in \mathbf{w} \wedge x \bmod 2^{32} \not\in \writable\mem}} \\
   \varepsilon^\mu &= \begin{cases}
-    \continue &\when \mathbf{x} = \{\} \\
+    \continue &\when \mathbf{x} = \emset \\
     \panic &\when \min(\mathbf{x}) \bmod 2^{32} < 2^{16} \\
     \fault \times \mathsf{Z}_P\floor{\min(\mathbf{x}) \bmod 2^{32} \div \mathsf{Z}_P} &\otherwise
   \end{cases}
@@ -168,43 +168,43 @@ Formally, let $\mathbf{r}$ and $\mathbf{w}$ be the set of indices by which $\mem
 We define signed/unsigned transitions for various octet widths:
 \begin{align}
   \label{eq:signedfunc}
-  \signfunc{n \in \N}&\colon\left\{\begin{aligned}
-    \N_{2^{8n}} &\to \Z_{-2^{8n-1}\dots2^{8n-1}}\\
+  \signfunc{n \in \N}&\colon\abracegroup{
+    \Nbits{8n} &\to \Z_{-2^{8n-1}\dots2^{8n-1}}\\
     a &\mapsto \begin{cases}
       a &\when a < 2^{8n-1} \\
       a -\ 2^{8n} &\otherwise
     \end{cases}
-  \end{aligned}\right.\\
-  \unsignfunc{n \in \N}&\colon\left\{\begin{aligned}
-    \Z_{-2^{8n-1}\dots2^{8n-1}} &\to \N_{2^{8n}}\\
+  }\\
+  \unsignfunc{n \in \N}&\colon\abracegroup{
+    \Z_{-2^{8n-1}\dots2^{8n-1}} &\to \Nbits{8n}\\
     a &\mapsto (2^{8n} + a) \bmod 2^{8n}
-  \end{aligned}\right.\\
+  }\\
   \label{eq:bitsfunc}
-  \bitsfunc{n\in\N}&\colon\left\{\begin{aligned}
-    \N_{2^{8n}} &\to \mathbb{B}_{8n}\\
+  \bitsfunc{n\in\N}&\colon\abracegroup{
+    \Nbits{8n} &\to \mathbb{B}_{8n}\\
     x &\mapsto \mathbf{y}: \forall i \in \N_{8n} : \mathbf{y}[i] \Leftrightarrow \ffrac{x}{2^i}\bmod 2
-  \end{aligned}\right.\\
-  \unbitsfunc{n\in\N}&\colon\left\{\begin{aligned}
-    \mathbb{B}_{8n} &\to \N_{2^{8n}}\\
+  }\\
+  \unbitsfunc{n\in\N}&\colon\abracegroup{
+    \mathbb{B}_{8n} &\to \Nbits{8n}\\
     \mathbf{x} &\mapsto y: \sum_{i \in \N_{8n}} \mathbf{x}_i \cdot 2^i
-  \end{aligned}\right.\\
+  }\\
   \label{eq:revbitsfunc}
-  \revbitsfunc{n\in\N}&\colon\left\{\begin{aligned}
-    \N_{2^{8n}} &\to \mathbb{B}_{8n}\\
+  \revbitsfunc{n\in\N}&\colon\abracegroup{
+    \Nbits{8n} &\to \mathbb{B}_{8n}\\
     x &\mapsto \mathbf{y}: \forall i \in \N_{8n} : \mathbf{y}[8n - 1 - i] \Leftrightarrow \ffrac{x}{2^i}\bmod 2
-  \end{aligned}\right.\\
-  \revunbitsfunc{n\in\N}&\colon\left\{\begin{aligned}
-    \mathbb{B}_{8n} &\to \N_{2^{8n}}\\
+  }\\
+  \revunbitsfunc{n\in\N}&\colon\abracegroup{
+    \mathbb{B}_{8n} &\to \Nbits{8n}\\
     \mathbf{x} &\mapsto y: \sum_{i \in \N_{8n}} \mathbf{x}_{8n - 1 - i} \cdot 2^i
-  \end{aligned}\right.
+  }
 \end{align}
 
 Immediate arguments are encoded in little-endian format with the most-significant bit being the sign bit. They may be compactly encoded by eliding more significant octets. Elided octets are assumed to be zero if the \textsc{msb} of the value is zero, and 255 otherwise. This allows for compact representation of both positive and negative encoded values. We thus define the signed extension function operating on an input of $n$ octets as $\sext_n$:
 \begin{align}\label{eq:signedextension}
-  \sext_{n \in \{0, 1, 2, 3, 4, 8\}}\colon\left\{\begin{aligned}
-    \N_{2^{8n}} &\to \pvmreg\\
+  \sext_{n \in \set{0, 1, 2, 3, 4, 8}}\colon\abracegroup{
+    \Nbits{8n} &\to \pvmreg\\
     x &\mapsto x + \ffrac{x}{2^{8n-1}}(2^{64}-2^{8n})
-  \end{aligned}\right.
+  }
 \end{align}
 
 Any alterations of the program counter stemming from a static jump, call or branch must be to the start of a basic block or else a panic occurs. Hypotheticals are not considered. Formally:
@@ -231,13 +231,13 @@ As with other irregular alterations to the program counter, target code index mu
 
 Only instructions which are defined in the following tables and whose opcode has its corresponding bit set in the bitmask are considered valid, otherwise the instruction behaves as-if its opcode was equal to zero. Assuming $U$ denotes all valid opcode indices, formally:
 \begin{equation}
-  \text{opcode}\colon\left\{\begin{aligned}
+  \text{opcode}\colon\abracegroup{
     \N &\to \N\\
     n &\mapsto \begin{cases}
     \mathbf{c}_n &\when \mathbf{k}_n = 1 \wedge \mathbf{c}_n \in U \\
     0 &\otherwise
     \end{cases}
-  \end{aligned}\right.
+  }
 \end{equation}
 
 We assume the skip length $\ell$ is well-defined:
@@ -702,57 +702,57 @@ Note, the term $h$ above refers to the beginning of the heap, the second major s
 
 Note that the two signed modulo operations have an idiosyncratic definition, operating as the modulo of the absolute values, but with the sign of the numerator. Formally:
 \begin{equation}
-  \smod\colon\left\{\begin{aligned}
+  \smod\colon\abracegroup{
     (\mathbb{Z}, \mathbb{Z}) &\to \mathbb{Z}\\
     (a, b) &\mapsto \begin{cases}
       a &\when b = 0\\
       \text{sgn}(a)(\len{a} \bmod \len{b}) &\otherwise \\
     \end{cases}
-  \end{aligned}\right.
+  }
 \end{equation}
 
 Division operations always round their result towards zero. Formally:
 \begin{equation}
-  \rtz\colon\left\{\begin{aligned}
+  \rtz\colon\abracegroup{
     \mathbb{Z} &\to \mathbb{Z}\\
     x &\mapsto \begin{cases}
       \ceil{x} &\when x < 0\\
       \floor{x} &\otherwise \\
     \end{cases}
-  \end{aligned}\right.
+  }
 \end{equation}
 
 \subsection{Host Call Definition}
 
 An extended version of the \textsc{pvm} invocation which is able to progress an inner \emph{host-call} state-machine in the case of a host-call halt condition is defined as $\Psi_H$:
 \begin{align}
-  &\Psi_H\colon \left\{\begin{aligned}
+  &\Psi_H\colon \abracegroup{
     \tuple{\begin{aligned}
       &\blob, \pvmreg, \gas, \regs,\\&\ram, \Omega\langle X \rangle, X
     \end{aligned}
     }
     &\to
-    \tuple{\{\panic, \oog, \halt\} \cup \{\fault\} \times \pvmreg, \pvmreg, \signedgas, \regs, \ram, X}\\
+    \tuple{\set{\panic, \oog, \halt} \cup \set{\fault} \times \pvmreg, \pvmreg, \signedgas, \regs, \ram, X}\\
     (\mathbf{c}, \imath, \gascounter, \registers, \mem, f, \mathbf{x}) &\mapsto \begin{cases}
       \multicolumn{2}{l}{\text{let }(\varepsilon', \imath', \gascounter', \registers', \mem') = \Psi(\mathbf{c}, \imath, \gascounter, \registers, \mem):} \\[8pt]
-      (\varepsilon', \imath', \gascounter', \registers', \mem', \mathbf{x}) &\when \varepsilon' \in \{ \halt, \panic, \oog \} \cup \{\fault\} \times \pvmreg \\[4pt]
-      (\fault \times a, \imath', \gascounter', \registers', \mem', \mathbf{x}) &\when \bigwedge\left\{\;\begin{aligned}
+      (\varepsilon', \imath', \gascounter', \registers', \mem', \mathbf{x}) &\when \varepsilon' \in \set{ \halt, \panic, \oog } \cup \set{\fault} \times \pvmreg \\[4pt]
+      (\fault \times a, \imath', \gascounter', \registers', \mem', \mathbf{x}) &\when \bigwedge\abracegroup[\;]{
         &\varepsilon' = \host \times h\\[2pt]
         &\fault \times a = f(h, \gascounter', \registers', \mem', \mathbf{x})\\[2pt]
-      \end{aligned}\right.\\[10 pt]
+      }\\[10 pt]
       \Psi_H(\mathbf{c}, \imath', \gascounter'', \registers'', \mem'', f, \mathbf{x}'')
-       &\when \bigwedge\left\{\;\begin{aligned}
+       &\when \bigwedge\abracegroup[\;]{
         &\varepsilon' = \host \times h\\[2pt]
         &(\continue, \gascounter'', \registers'', \mem'', \mathbf{x}'') = f(h, \gascounter', \registers', \mem', \mathbf{x})
-      \end{aligned}\right.\\[8pt]
-      (\varepsilon'', \imath', \gascounter'', \registers'', \mem'', \mathbf{x}'') &\when  \bigwedge\left\{\;\begin{aligned}
+      }\\[8pt]
+      (\varepsilon'', \imath', \gascounter'', \registers'', \mem'', \mathbf{x}'') &\when  \bigwedge\abracegroup[\;]{
         &\varepsilon' = \host \times h\\[2pt]
         &(\varepsilon'', \gascounter'', \registers'', \mem'', \mathbf{x}'') = f(h, \gascounter', \registers', \mem', \mathbf{x})\\[2pt]
-        &\varepsilon'' \in \{\panic, \halt, \oog\}
-      \end{aligned}\right.\\[8pt]
+        &\varepsilon'' \in \set{\panic, \halt, \oog}
+      }\\[8pt]
     \end{cases} \\
-    \end{aligned}\right.\!\!\!\!\!\!\!\!\\
-    &\Omega\langle X \rangle \equiv (\N, \gas, \regs, \ram, X) \to \tuple{\{\continue, \halt, \panic, \oog\}, \gas, \regs, \ram, X} \cup \{\fault\} \times \pvmreg
+    }\!\!\!\!\!\!\!\!\\
+    &\Omega\langle X \rangle \equiv (\N, \gas, \regs, \ram, X) \to \tuple{\set{\continue, \halt, \panic, \oog}, \gas, \regs, \ram, X} \cup \set{\fault} \times \pvmreg
 \end{align}
 
 On exit, the instruction counter $\imath'$ references the instruction \emph{which caused the exit}. Should the machine be invoked again using this instruction counter and code, then the same instruction which caused the exit would be executed. This is sensible when the instruction is one which necessarily needs re-executing such as in the case of an out-of-gas or page fault reason.
@@ -766,13 +766,13 @@ The software programs which will run in each of the four instances where the \te
 
 We thus define the standard program code format $\mathbf{p}$, which includes not only the instructions and jump table (previously represented by the term $\mathbf{c}$), but also information on the state of the \textsc{ram} at program start. Given program blob $\mathbf{p}$ and argument data $\mathbf{a}$, we can decode the program code $\mathbf{c}$, registers $\registers$, and \textsc{ram} $\mem$ by invoking the standard initialization function $Y(\mathbf{p}, \mathbf{a})$:
 \begin{equation}
-Y\colon\left\{\begin{aligned}
+Y\colon\abracegroup{
   (\blob, \blob_{:\mathsf{Z}_I}) &\to (\blob, \regs, \ram)? \\
   (\mathbf{p}, \mathbf{a}) &\mapsto \begin{cases}
     (\mathbf{c}, \registers, \mem) &\when \exists! (\mathbf{c}, \mathbf{o}, \mathbf{w}, z, s) \text{ which satisfy equation \ref{eq:conditions}}\\
     \none &\otherwise
   \end{cases}
-\end{aligned}\right.
+}
 \end{equation}
 With conditions:
 \begin{align}\label{eq:conditions}
@@ -783,7 +783,7 @@ With conditions:
 \end{align}
 Thus, if the above conditions cannot be satisfied with unique values, then the result is $\none$, otherwise it is a tuple of $\mathbf{c}$ as above and $\mem$, $\registers$ such that:
 \begin{equation}\label{eq:memlayout}
-  \forall i \in \Nbits{32} : ((\mem_\ram¬value)_i, (\mem_\ram¬access)_{\floor{\nicefrac{i}{\mathsf{Z}_P}}}) = \left\{\begin{alignedat}{5}
+  \forall i \in \Nbits{32} : ((\mem_\ram¬value)_i, (\mem_\ram¬access)_{\floor{\nicefrac{i}{\mathsf{Z}_P}}}) = \bracegroup{\begin{alignedat}{5}
     &\tup{\is{\ram¬value}{\mathbf{o}_{i - \mathsf{Z}_Z}},\,\is{\ram¬access}{R}} &&\ \when
         \mathsf{Z}_Z
             &\ \leq i < \ &&
@@ -813,7 +813,7 @@ Thus, if the above conditions cannot be satisfied with unique values, then the r
             &\ \leq i < \ &&
                 2^{32} - \mathsf{Z}_Z - \mathsf{Z}_I + \rnp{\len{\mathbf{a}}}\\
     &(0, \none) &&\otherwise&&&
-  \end{alignedat}\right.\\
+  \end{alignedat}}\\
 \end{equation}
 \begin{equation}\label{eq:registers}
   \forall i \in \N_{13} : \registers_i = \begin{cases}
@@ -829,10 +829,10 @@ Thus, if the above conditions cannot be satisfied with unique values, then the r
 
 The four instances where the \textsc{pvm} is utilized each expect to be able to pass argument data in and receive some return data back. We thus define the common \textsc{pvm} program-argument invocation function $\Psi_M$:
 \begin{equation}
-  \Psi_M\colon \left\{\begin{aligned}
+  \Psi_M\colon \abracegroup{
     \left(
       \blob, \pvmreg, \gas, \blob_{:\mathsf{Z}_I}, \Omega\langle X \rangle, X
-    \right) &\to (\gas, \blob \cup \{\panic, \oog\}, X)\\
+    \right) &\to (\gas, \blob \cup \set{\panic, \oog}, X)\\
     (\mathbf{p}, \imath, \gascounter, \mathbf{a}, f, \mathbf{x}) &\mapsto \begin{cases}
       (0, \panic, \mathbf{x}) &\when Y(\mathbf{p}, \mathbf{a}) = \none\\
       R(\gascounter, \Psi_H(\mathbf{c}, \imath, \gascounter, \registers, \mem, f, \mathbf{x})) &\when Y(\mathbf{p}, \mathbf{a}) = (\mathbf{c}, \registers, \mem)\\
@@ -843,14 +843,14 @@ The four instances where the \textsc{pvm} is utilized each expect to be able to 
         \end{alignedat}
         }) \mapsto \begin{cases}
           (u, \oog, \mathbf{x}') &\when \varepsilon = \oog \\
-          (u, \memory'_{\registers'_{7}\dots+\registers'_{8}}, \mathbf{x}') &\when \varepsilon = \halt \wedge \mathbb{N}_{\registers'_{7}\dots+\registers'_{8}} \subseteq \readable{\mem'} \\
-          (u, [], \mathbf{x}') &\when \varepsilon = \halt \wedge \mathbb{N}_{\registers'_{7}\dots+\registers'_{8}} \not\subseteq \readable{\mem'} \\
+          (u, \memory'_{\registers'_{7}\dots+\registers'_{8}}, \mathbf{x}') &\when \varepsilon = \halt \wedge \N_{\registers'_{7}\dots+\registers'_{8}} \subseteq \readable{\mem'} \\
+          (u, [], \mathbf{x}') &\when \varepsilon = \halt \wedge \N_{\registers'_{7}\dots+\registers'_{8}} \not\subseteq \readable{\mem'} \\
           (u, \panic, \mathbf{x}') &\otherwise \\
           \multicolumn{2}{l}{\quad \where u = \gascounter - \max(\gascounter', 0)}
         \end{cases}
       }\!\!\!\!\!\!\!\!
     \end{cases}
-  \end{aligned}\right.
+  }
 \end{equation}
 
 Note that the first tuple item is the amount of gas consumed by the operation, but never greater than the amount of gas provided for the operation.
