--- a/text/recent_history.tex
+++ b/text/recent_history.tex
@@ -36,7 +36,7 @@ The final state transition for $\recenthistory$ appends a new item including the
       \is{b}{\mmrsuperpeak(\beefybelt')},
       \is{s}{\zerohash}
       }}}^\mathsf{H} \\
-    \where \mathbf{p} &= \{ ((g_\xg¬workreport)_\wr¬avspec)_\as¬packagehash \mapsto ((g_\xg¬workreport)_\wr¬avspec)_\as¬segroot \mid g \in \xtguarantees \}
+    \where \mathbf{p} &= \set{ ((g_\xg¬workreport)_\wr¬avspec)_\as¬packagehash \mapsto ((g_\xg¬workreport)_\wr¬avspec)_\as¬segroot \mid g \in \xtguarantees }
   \end{aligned}
 \end{equation}
 
