--- a/text/serialization.tex
+++ b/text/serialization.tex
@@ -27,26 +27,26 @@ Passing multiple arguments to the serialization functions is equivalent to passi
 
 %We also define the variable-size prefix 29-bit natural serialization function $\se_{4*}$:
 %\begin{equation}
-%  \se_{4*}\colon\left\{\begin{aligned}
+%  \se_{4*}\colon\abracegroup{
 %    \Nbits{29} &\to \blob_{1:4} \\
 %    x &\mapsto \begin{cases}
 %      [0] &\when x = 0 \\
 %      \left[2^8-2^{8-l} + \ffrac{x}{2^{8l}}\right] \concat \se_l(x \bmod 2^{8l}) &\when \exists l \in \N_3 : 2^{7l} \le x < 2^{7(l+1)} \\
 %      \left[2^8-2^5 + \ffrac{x}{2^{24}}\right] \concat \se_3(x \bmod 2^{24}) &\when 2^{21} \le x < 2^{29} \\
 %    \end{cases}
-%  \end{aligned}\right.
+%  }
 %\end{equation}
 
 We define general natural number serialization, able to encode naturals of up to $2^{64}$, as:
 \begin{equation}
-  \se\colon\left\{\begin{aligned}
+  \se\colon\abracegroup{
     \Nbits{64} &\to \blob_{1:9} \\
     x &\mapsto \begin{cases}
       [0] &\when x = 0 \\
       \left[2^8-2^{8-l} + \ffrac{x}{2^{8l}}\right] \concat \se_l(x \bmod 2^{8l}) &\when \exists l \in \N_8 : 2^{7l} \le x < 2^{7(l+1)} \\
       [2^8-1] \concat \se_8(x) &\otherwhen x < 2^{64} \\
     \end{cases}
-  \end{aligned}\right.
+  }
 \end{equation}
 
 \subsubsection{Sequence Encoding}
@@ -107,19 +107,19 @@ In general, dictionaries are placed in the Merkle trie directly (see appendix \r
 \subsubsection{Set Encoding}
 For any values which are sets and don't already have a defined encoding above, we define the serialization of a set as the serialization of the set's elements in proper order. Formally:
 \begin{equation}
-  \se(\{a, b, c, \dots\}) \equiv \se(a) \concat \se(b) \concat \se(c) \concat \dots \where a < b < c < \dots
+  \se(\set{a, b, c, \dots}) \equiv \se(a) \concat \se(b) \concat \se(c) \concat \dots \where a < b < c < \dots
 \end{equation}
 
 \subsubsection{Fixed-length Integer Encoding}
 We first define the trivial natural number serialization functions which are subscripted by the number of octets of the final sequence. Values are encoded in a regular little-endian fashion. This is utilized for almost all integer encoding across the protocol. Formally:
 \begin{equation}
-  \se_{l \in \N}\colon\left\{\begin{aligned}
+  \se_{l \in \N}\colon\abracegroup{
     \N_{2^{8l}} &\to \blob_l \\
     x &\mapsto \begin{cases}
       [] &\when l = 0 \\
       [x \bmod 256] \concat \se_{l - 1}\left(\left\lfloor \frac{x}{256} \right\rfloor\right) &\otherwise
     \end{cases}
-  \end{aligned}\right.
+  }
 \end{equation}
 
 For non-natural arguments, $\se_{l \in \N}$ corresponds to the definitions of $\se$, except that recursive elements are made as $\se_l$ rather than $\se$. Thus:
